--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,9 +1,15 @@
 -----Sign-up Html Component--
 <br>
 <p>
-  sign-up works!
+  Quete 1 Angular Component
 </p>
 
-<h1>emailRenseignéDansInput</h1><input type="email" name="email" value="{{email}}"/>
+<h1>{{email}}</h1>
+
+<label>Email :
+  <input [(ngModel)]="email" type="email" name="email">
+</label>
+
+
 <br>
 -------------------
